@@ -65,26 +65,31 @@ public:
   using const_iterator = const_pointer;
   using const_reverse_iterator = std::reverse_iterator<const_iterator>;
 
-  binarystring(binarystring const &) = default;
+  [[deprecated("Use std::byte for binary data.")]] binarystring(
+    binarystring const &) = default;
 
   /// Read and unescape bytea field.
   /** The field will be zero-terminated, even if the original bytea field
    * isn't.
    * @param F the field to read; must be a bytea field
    */
-  explicit binarystring(field const &);
+  [[deprecated("Use std::byte for binary data.")]] explicit binarystring(
+    field const &);
 
   /// Copy binary data from std::string_view on binary data.
   /** This is inefficient in that it copies the data to a buffer allocated on
    * the heap.
    */
-  explicit binarystring(std::string_view);
+  [[deprecated("Use std::byte for binary data.")]] explicit binarystring(
+    std::string_view);
 
   /// Copy binary data of given length straight out of memory.
-  binarystring(void const *, std::size_t);
+  [[deprecated("Use std::byte for binary data.")]] binarystring(
+    void const *, std::size_t);
 
   /// Efficiently wrap a buffer of binary data in a @c binarystring.
-  binarystring(std::shared_ptr<value_type> ptr, size_type size) :
+  [[deprecated("Use std::byte for binary data.")]] binarystring(
+    std::shared_ptr<value_type> ptr, size_type size) :
           m_buf{std::move(ptr)}, m_size{size}
   {}
 
@@ -204,11 +209,13 @@ template<> struct string_traits<binarystring>
 
   static binarystring from_string(std::string_view text)
   {
+#include "pqxx/internal/ignore-deprecated-pre.hxx"
     auto const size{pqxx::internal::size_unesc_bin(std::size(text))};
     std::shared_ptr<unsigned char> buf{
       new unsigned char[size], [](unsigned char const *x) { delete[] x; }};
     pqxx::internal::unesc_bin(text, reinterpret_cast<std::byte *>(buf.get()));
     return binarystring{std::move(buf), size};
+#include "pqxx/internal/ignore-deprecated-post.hxx"
   }
 };
 } // namespace pqxx
