@@ -102,6 +102,7 @@ public:
 
   [[nodiscard]] size_type size() const noexcept { return m_end - m_begin; }
 
+  // TODO: Remove this.  Deprecated since early 2020.
   /// @deprecated Do this sort of thing on iterators instead.
   void swap(row &) noexcept;
 
