@@ -861,7 +861,9 @@ std::string pqxx::connection::unesc_raw(char const text[]) const
 std::string
 pqxx::connection::quote_raw(unsigned char const bin[], std::size_t len) const
 {
+#include "pqxx/internal/ignore-deprecated-pre.hxx"
   return internal::concat("'", esc_raw(bin, len), "'::bytea");
+#include "pqxx/internal/ignore-deprecated-post.hxx"
 }
 
 
@@ -874,7 +876,9 @@ pqxx::connection::quote_raw(std::basic_string_view<std::byte> bytes) const
 
 std::string pqxx::connection::quote(binarystring const &b) const
 {
+#include "pqxx/internal/ignore-deprecated-pre.hxx"
   return quote_raw(b.data(), std::size(b));
+#include "pqxx/internal/ignore-deprecated-post.hxx"
 }
 
 
