@@ -108,7 +108,7 @@ void test_nonoptionals(pqxx::connection &connection)
 void test_bad_tuples(pqxx::connection &conn)
 {
   pqxx::work tx{conn};
-  pqxx::stream_from extractor{tx, "stream_from_test"};
+  pqxx::stream_from extractor{tx, pqxx::from_table, "stream_from_test"};
   PQXX_CHECK(extractor, "stream_from failed to initialize");
 
   std::tuple<int> got_tuple_too_short;
@@ -244,7 +244,7 @@ void test_stream_from__escaping()
   pqxx::work tx{conn};
   tx.exec0("CREATE TEMP TABLE badstr (str text)");
   tx.exec0("INSERT INTO badstr (str) VALUES (" + tx.quote(input) + ")");
-  pqxx::stream_from reader{tx, "badstr"};
+  pqxx::stream_from reader{tx, pqxx::from_table, "badstr"};
   std::tuple<std::string> out;
   reader >> out;
   PQXX_CHECK_EQUAL(
@@ -258,7 +258,7 @@ void test_stream_from__iteration()
   pqxx::work tx{conn};
   tx.exec0("CREATE TEMP TABLE str (s text)");
   tx.exec0("INSERT INTO str (s) VALUES ('foo')");
-  pqxx::stream_from reader{tx, "str"};
+  pqxx::stream_from reader{tx, pqxx::from_table, "str"};
 
   int i{0};
   std::string out;
@@ -273,7 +273,7 @@ void test_stream_from__iteration()
   tx.exec0("INSERT INTO str (s) VALUES ('bar')");
   i = 0;
   std::set<std::string> strings;
-  pqxx::stream_from reader2{tx, "str"};
+  pqxx::stream_from reader2{tx, pqxx::from_table, "str"};
   for (std::tuple<std::string> t : reader2.iter<std::string>())
   {
     i++;
