@@ -1,8 +1,9 @@
 7.3.1
- - Fix visibility issue on gcc/clang, especially on macOS.  (#395)
- - Use "pure" & "visibility" attributes if they work, regardless of compiler.
  - New, simpler API for large objects: `blob` ("binary large object").
  - `largeobject` and friends are now deprecated.
+ - Fix visibility issue on gcc/clang, especially on macOS.  (#395)
+ - Use "pure" & "visibility" attributes if they work, regardless of compiler.
+ - More deprecated items now have the `[[deprecated]]` attribute.
 7.3.0
  - `stream_to` now quotes and escapes its table name.
  - Removed `transaction_base::classname()`.  Did anyone ever use it?
